--- a/Practice/newapp/index.html
+++ b/Practice/newapp/index.html
@@ -1,18 +1,43 @@
-
-
 <!DOCTYPE html>
-
 <html lang="en">
-
 <head>
-    <meta charset = "UTF-8">
-    <title> Angular 2 App </title>
+  <meta charset="UTF-8">
+  <title>Angular 2 app</title>
 
+  <!-- Load our bootstrap style stuff -->
+
+  <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
+
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+
+  <script src="node_modules/core-js/client/shim.min.js"></script>
+  <script src="node_modules/zone.js/dist/zone.js"></script>
+
+  <!-- Load our angular app with Systemjs -->
+  <script src="node_modules/systemjs/dist/system.src.js"></script>
+  <script src="systemjs.config.js"></script>
+  <script>
+    System.import('app').catch(function(err) { console.error(err); }); 
+  </script>
 </head>
-
 <body>
-    <h2> Setting up the dev environment - EDITED </h2>
+    <div class="container-fluid">
+        <div class="row" style="margin-top: 100px;">
+            <div class="col-md-offset-2 col-md-8">
+                <div class="panel panel-primary">
+                    <div class="panel-heading">
+                        <h3 class="panel-title">
+                            QRE
+                        </h3>
+                    </div>
+                    <div class="panel-body" style="height: 200px;">
+                        <my-nav-bar></my-nav-bar>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
-
 </html>
-
